fix overflow blue bug issue

--- a/src/components/Viz.css
+++ b/src/components/Viz.css
@@ -2,7 +2,7 @@
     background-color: #1479ed;
     color: white;
     border-radius: 10px;
-    padding: 2rem;
+    padding: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
